build filter tree

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,13 @@
 # They can be used directly for unit tests.
 # the ../src part is so that they can be accessed from outside the src tree
 set(_graph_files  
-      ../src/edge.c      
+      ../src/edge.c
       ../src/node.c
       ../src/value.c
       ../src/module.c
       ../src/triplet.c
       ../src/value_cmp.c
+      ../src/query_executor.c
 
       ../src/parser/ast.c
       ../src/parser/lex.yy.c
@@ -16,7 +17,7 @@ set(_graph_files
       ../src/rmutil/sds.c
       ../src/rmutil/util.c
       ../src/rmutil/vector.c
-      ../src/rmutil/strings.c      
+      ../src/rmutil/strings.c
       )
 
 
