--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+enable_testing()
+
 add_executable(test_edge test_edge.c ${graph_files})
 add_test(test_edge test_edge)
 
@@ -6,3 +8,9 @@ add_test(test_node test_node)
 
 add_executable(test_triplet test_triplet.c ${graph_files})
 add_test(test_triplet test_triplet)
+
+add_executable(test_graph test_graph.c ${graph_files})
+add_test(test_graph test_graph)
+
+add_executable(test_agg_sum test_agg_sum.c ${graph_files})
+add_test(test_agg_sum test_agg_sum)
