link against uuid, c99 features

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,4 +84,8 @@ add_library(librmutil STATIC IMPORTED ../../src/rmutil/librmutil.a)
 target_compile_options(module PUBLIC "-DREDIS_MODULE_TARGET")
 
 target_link_libraries(module Llibgraph)
+set_property(TARGET Llibgraph PROPERTY C_STANDARD 99)
+target_link_libraries(Llibgraph uuid)
+
 target_link_libraries(module m)
+set_property(TARGET module PROPERTY C_STANDARD 99)
