optimized filtering, filters are applied as soon as posible, each filter contains a minimum filter tree

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,3 +17,6 @@ add_test(test_agg_sum test_agg_sum)
 
 add_executable(test_filter_tree test_filter_tree.c ${graph_files})
 add_test(test_filter_tree test_filter_tree)
+
+add_executable(test_hexastore test_hexastore.c ${graph_files})
+add_test(test_hexastore test_hexastore)
