Adds `make deploydocs` target
The new make target builds and deploys the documentation to the
website. To run it, first `pip install s3cmd` and configure your
credentials.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,8 @@ enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(test)
+
+add_custom_target(deploydocs mkdocs build
+                  COMMAND s3cmd sync site/ s3://redisgraph.io
+                  COMMENT "Builds and deploys the module's documentation website"
+                  VERBATIM)
