--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,8 @@ extra:
       link: 'https://twitter.com/redislabs'
 
 pages:
-    - 'Redis Graph': index.md
+    - 'Quickstart': index.md
+    - 'Commands': commands.md
     - 'Design': design.md
 
 markdown_extensions:
