--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,21 @@
 *.x86_64
 *.hex
 
+# Folders
+CMakeFiles/
+
+# Files
+Makefile
+CMakeCache.txt
+DartConfiguration.tcl
+
 # Debug files
 *.dSYM/
 *.su
 
+# Additional suffixes
 *.pyc
 *.cmake
 *.make
+*.xml
+*.iml
