travis update cmake

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: c
 compiler: gcc
 dist: xenial
+addons:
+  apt:
+    sources:
+      - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
+    packages:
+      - cmake
+      - cmake-data
 before_script:
 - pip install --user redis ramp-packer rmtest
 - git clone -b 4.0.1 --depth 1 https://github.com/antirez/redis.git
@@ -10,6 +17,7 @@ before_script:
 env:
 - REDIS_MODULE_PATH=$TRAVIS_BUILD_DIR/src/libmodule.so REDIS_PATH=$TRAVIS_BUILD_DIR/redis/src/redis-server
 script:
+- cmake --version
 - cmake .
-- make
-- make test
+- make module
+# - make test
