--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ deploy:
     skip_cleanup: true
     acl: public_read
     bucket: redismodules
-    upload-dir: $MODULE_NAME
+    upload-dir: redisgraph
     on:
       branch: master
     local_dir: $TRAVIS_BUILD_DIR/build
