delete query, for both nodes and relations removal (#43)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ set(_graph_files
       ../src/execution_plan/ops/op_filter.c
       ../src/execution_plan/ops/op_aggregate.c
       ../src/execution_plan/ops/op_create.c
+      ../src/execution_plan/ops/op_delete.c
 
       ../src/execution_plan/execution_plan.c
 
