--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -47,6 +47,7 @@ set(test_graph_files
       ../../src/execution_plan/ops/op_filter.c
       ../../src/execution_plan/ops/op_aggregate.c
       ../../src/execution_plan/ops/op_create.c
+      ../../src/execution_plan/ops/op_delete.c
 
       ../../src/execution_plan/execution_plan.c
 
