--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,9 @@ language: c
 compiler: gcc
 dist: xenial
 
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
-    packages:
-      - cmake
-      - cmake-data
-
 env:
   - MODULE_NAME=redisgraph
-  - REDIS_MODULE_PATH=$TRAVIS_BUILD_DIR/src/libmodule.so
+  - REDIS_MODULE_PATH=$TRAVIS_BUILD_DIR/src/redisgraph.so
   - REDIS_PATH=$TRAVIS_BUILD_DIR/redis/src/redis-server
 
 before_script:
@@ -23,13 +15,11 @@ before_script:
   - cd ..
 
 script:
-  - cmake --version
-  - cmake .
   - make clean
-  - make module
+  - make
   - cd src
   - mkdir -p ../build
-  - module_packer -v -o "../build/redisgraph.{os}-{architecture}.latest.zip" "`pwd`/libmodule.so"
+  - module_packer -v -o "../build/redisgraph.{os}-{architecture}.latest.zip" "`pwd`/redisgraph.so"
   - cd ..
   # - make test
 
