remove https from redisgraph.io

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Redis Graph - a graph database module for Redis
-site_url: https://redisgraph.io
+site_url: http://redisgraph.io
 site_favicon: 'images/favicon.png'
 repo_url: https://github.com/RedisLabsModules/redis-graph
 repo_name: RedisLabsModules/redis-graph
