--- a/ramp_manifest.yml
+++ b/ramp_manifest.yml
@@ -5,4 +5,4 @@ homepage: http://redisgraph.io
 license: AGPL-3.0
 command_line_args: ""
 min_redis_version: "4.0"
-min_rlec_version: "5.2"
+min_redis_pack_version: "5.0"
