Rename aggregate folder to arithmetic (#73)
* change min_redis_pack_version to 5.0

* rename aggregate folder to arithmetic

* rename aggregate folder to arithmetic
move arithmetic_expression to arithmetic folder

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ export CFLAGS
 # Sources
 SOURCEDIR=$(shell pwd -P)
 CC_SOURCES = $(wildcard $(SOURCEDIR)/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/aggregate/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/ops/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/filter_tree/*.c)
