--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -31,7 +31,10 @@ value: test_value.o
 arithmetic_expression: test_arithmetic_expression.o
 	$(CC) $(CFLAGS)  -o test_arithmetic_expression test_arithmetic_expression.o  $(DEPS) $(LDFLAGS)
 
-build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression
+resultset_record: test_resultset_record.o
+	$(CC) $(CFLAGS)  -o test_resultset_record test_resultset_record.o  $(DEPS) $(LDFLAGS)
+
+build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression resultset_record
 
 test_graph:
 	@(sh -c ./test_graph)
@@ -57,6 +60,10 @@ test_arithmetic_expression:
 	@(sh -c ./test_arithmetic_expression)
 .PHONY: test_arithmetic_expression
 
-test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression
+test_resultset_record:
+	@(sh -c ./test_resultset_record)
+.PHONY: test_resultset_record
+
+test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression test_resultset_record
 
 all: build test
