Reintroduce skiplist unit tests

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -25,7 +25,13 @@ tuples_iter: test_tuples_iter.o
 filter_tree: test_filter_tree.o
 	$(CC) $(CFLAGS) -o test_filter_tree test_filter_tree.o  $(DEPS) $(LDFLAGS)
 
-build: graph algebraic_expression tuples_iter filter_tree
+skiplist_generic: test_skiplist_generic.o
+	$(CC) $(CFLAGS)  -o test_skiplist_generic test_skiplist_generic.o  $(DEPS) $(LDFLAGS)
+
+skiplist_graph: test_skiplist_graph.o
+	$(CC) $(CFLAGS)  -o test_skiplist_graph test_skiplist_graph.o  $(DEPS) $(LDFLAGS)
+
+build: graph algebraic_expression tuples_iter filter_tree skiplist_generic skiplist_graph
 
 test_graph:
 	@(sh -c ./test_graph)
@@ -43,6 +49,14 @@ test_filter_tree:
 	@(sh -c ./test_filter_tree)
 .PHONY: test_filter_tree
 
-test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree
+test_skiplist_generic:
+	@(sh -c ./test_skiplist_generic)
+.PHONY: test_skiplist_generic
+
+test_skiplist_graph:
+	@(sh -c ./test_skiplist_graph)
+.PHONY: test_skiplist_graph
+
+test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_skiplist_generic test_skiplist_graph
 
 all: build test
