Sivalue string refactor (#21)
* Fix include paths in arithmetic_expression

* Use simplified string SIValue functions in parser

* Syntax file updates for simplified strings

* Replaced SIString struct with char*

* String-modifying operations use char pointers instead of SI_Strings

* Fixed calls relying on SIValue strings

* Result set uses updated string functions

* Test suite uses updated string functions

* Compare strings with strcasecmp, as null-termination is guaranteed

* Duplicate string for constructed SIValue when parsing string input

* Reintroduce test for SIValue conversion

* Use strtod to validate numerics in SIValue construction

* Extend testing of SIValue_FromString conversion

* Deleted unnecessary whitespace

* SIValue_FromString takes const argument

* Reintroduce arithmetic and string unit tests

* Use local variables as strlen arguments

* Add null terminator to strings serialized in keyspace

* Zero-initialize AR_TOSTRING reply

* Reintroduce resultset_record unit tests

* Separate logic for memory management of concatenated strings

* Fix memory leaks in SIValue unit test

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -25,7 +25,16 @@ tuples_iter: test_tuples_iter.o
 filter_tree: test_filter_tree.o
 	$(CC) $(CFLAGS) -o test_filter_tree test_filter_tree.o  $(DEPS) $(LDFLAGS)
 
-build: graph algebraic_expression tuples_iter filter_tree
+value: test_value.o
+	$(CC) $(CFLAGS)  -o test_value test_value.o  $(DEPS) $(LDFLAGS)
+
+arithmetic_expression: test_arithmetic_expression.o
+	$(CC) $(CFLAGS)  -o test_arithmetic_expression test_arithmetic_expression.o  $(DEPS) $(LDFLAGS)
+
+resultset_record: test_resultset_record.o
+	$(CC) $(CFLAGS)  -o test_resultset_record test_resultset_record.o  $(DEPS) $(LDFLAGS)
+
+build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression resultset_record
 
 test_graph:
 	@(sh -c ./test_graph)
@@ -43,6 +52,18 @@ test_filter_tree:
 	@(sh -c ./test_filter_tree)
 .PHONY: test_filter_tree
 
-test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree
+test_value:
+	@(sh -c ./test_value)
+.PHONY: test_value
+
+test_arithmetic_expression:
+	@(sh -c ./test_arithmetic_expression)
+.PHONY: test_arithmetic_expression
+
+test_resultset_record:
+	@(sh -c ./test_resultset_record)
+.PHONY: test_resultset_record
+
+test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression test_resultset_record
 
 all: build test
