graph marices reduced to node_count rows and columns, using GxB_Matrix_resize to remove deleted rows and columns.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@ test:
 	$(MAKE) -C unit all
 
 	# flow tests
-	# python -m unittest discover --verbose
+	python -m unittest discover --verbose
 
 clean:
 	find . -name '*.[oad]' -type f -delete
