More comprehensive unit testing for indices

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -31,6 +31,9 @@ skiplist_generic: test_skiplist_generic.o
 skiplist_graph: test_skiplist_graph.o
 	$(CC) $(CFLAGS)  -o test_skiplist_graph test_skiplist_graph.o  $(DEPS) $(LDFLAGS)
 
+index: test_index.o
+	$(CC) $(CFLAGS)  -o test_index test_index.o  $(DEPS) $(LDFLAGS)
+
 value: test_value.o
 	$(CC) $(CFLAGS)  -o test_value test_value.o  $(DEPS) $(LDFLAGS)
 
@@ -40,7 +43,7 @@ arithmetic_expression: test_arithmetic_expression.o
 resultset_record: test_resultset_record.o
 	$(CC) $(CFLAGS)  -o test_resultset_record test_resultset_record.o  $(DEPS) $(LDFLAGS)
 
-build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression resultset_record skiplist_generic skiplist_graph
+build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression resultset_record skiplist_generic skiplist_graph index
 
 test_graph:
 	@(sh -c ./test_graph)
@@ -66,6 +69,10 @@ test_skiplist_graph:
 	@(sh -c ./test_skiplist_graph)
 .PHONY: test_skiplist_graph
 
+test_index:
+	@(sh -c ./test_index)
+.PHONY: test_index
+
 test_value:
 	@(sh -c ./test_value)
 .PHONY: test_value
@@ -78,6 +85,6 @@ test_resultset_record:
 	@(sh -c ./test_resultset_record)
 .PHONY: test_resultset_record
 
-test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression test_resultset_record test_skiplist_generic test_skiplist_graph
+test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression test_resultset_record test_skiplist_generic test_skiplist_graph test_index
 
 all: build test
