run Cypher Technology Compatibility Kit as part of make test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,6 +4,9 @@ test:
 
 	# flow tests
 	python -m unittest discover --verbose
+	
+	# Cypher Technology Compatibility Kit (TCK)
+	$(MAKE) -C tck
 
 clean:
 	find . -name '*.[oad]' -type f -delete
