--- a/ramp.yml
+++ b/ramp.yml
@@ -3,7 +3,7 @@ author: RedisLabs
 email: roi@redislabs.com
 description: A graph database on top of Redis which supports Open-Cypher query language.
 homepage: http://redisgraph.io
-license: AGPLv3
+license: Apache 2.0 with Commons Clause
 command_line_args: ""
 min_redis_version: "4.0"
 min_redis_pack_version: "5.0"
