--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -1,7 +1,6 @@
 # Adapted from the sample Makefile provided with GoogleTest
 
 # Points to the root of Google Test, relative to where this file is.
-# Remember to tweak this if you move this file.
 GTEST_DIR = ../googletest
 
 # Flags passed to the preprocessor.
@@ -11,14 +10,18 @@ CPPFLAGS += -isystem $(GTEST_DIR)/include
 
 # Flags passed to the C++ compiler.
 CXXFLAGS += -g -Wall -Wextra -pthread
-CXXSUPPRESS = -Wno-write-strings
+CXX_SUPPRESS = -Wno-sign-compare -Wno-unused-variable
 
 # Google Test headers - do not modify
 GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h \
                 $(GTEST_DIR)/include/gtest/internal/*.h
 
 # RedisGraph flags and libraries
-CFLAGS:=$(CFLAGS)
+
+# TODO - unused right now (perhaps always?)
+# CFLAGS:=$(CFLAGS)
+
+LDFLAGS :=  -lc -lm -ldl -lpthread
 CC_OBJECTS:=$(CC_OBJECTS)
 LIBRMUTIL=../../src/rmutil/librmutil.a
 LIBTRIEMAP=../../src/util/triemap/libtriemap.a
@@ -27,27 +30,21 @@ LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBS=$(LIBTRIEMAP) $(LIBRMUTIL) $(LIBGRAPHBLAS)
 DEPS=$(CC_OBJECTS) $(LIBS)
 
-# Tests
-TESTS = value_handler
+# Test compilation targets
+TESTS = test_value test_graph
 
 run_tests: $(TESTS)
-	@(sh -c ./value_handler)
+	@(sh -c ./test_value)
+	@(sh -c ./test_graph)
 
 all : $(TESTS) run_tests
 
 clean :
 	rm -f $(TESTS) gtest.a gtest_main.a *.o
 
-# Builds gtest.a and gtest_main.a.
-
-# Usually you shouldn't tweak such internal variables, indicated by a
-# trailing _.
+# Google Test compiler targets
 GTEST_SRCS_ = $(GTEST_DIR)/src/*.cc $(GTEST_DIR)/src/*.h $(GTEST_HEADERS)
 
-# For simplicity and to avoid depending on Google Test's
-# implementation details, the dependencies specified below are
-# conservative and not optimized.  This is fine as Google Test
-# compiles fast and for ordinary users its source rarely changes.
 gtest-all.o : $(GTEST_SRCS_)
 	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c \
             $(GTEST_DIR)/src/gtest-all.cc
@@ -62,20 +59,11 @@ gtest.a : gtest-all.o
 gtest_main.a : gtest-all.o gtest_main.o
 	$(AR) $(ARFLAGS) $@ $^
 
-# A test should link with either gtest.a or gtest_main.a, depending on whether it defines its own main()
-# function.
 
-SRCDIR := $(shell pwd)
-LDFLAGS :=  -lc -lm -ldl -lpthread
+# RedisGraph compiler targets
+test_value: test_value.o gtest_main.a $(DEPS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
 
-.SUFFIXES: .cc .c .so .xo .o
-
-test_value.o : test_value.c
-	$(CC) $(CFLAGS) -c test_value.c $(LDFLAGS)
-
-value_handler.o : value_handler.cc $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXXSUPPRESS) -c value_handler.cc $(LDFLAGS)
-
-value_handler: ../../src/value.o test_value.o value_handler.o gtest_main.a
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXXSUPPRESS) -lpthread $^ -o $@
+test_graph: test_graph.o gtest_main.a $(DEPS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
 
