--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ extra:
   palette:
     primary: 'indigo'
   logo: 'images/logo.svg'
+  favicon: 'images/favicon.png'
   social:
     - type: 'github'
       link: 'https://github.com/redislabs'
