Implicit compile and run rules for .cpp unit tests

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -1,6 +1,4 @@
-# Adapted from the sample Makefile provided with GoogleTest
-
-# Points to the root of Google Test, relative to where this file is.
+# Path to Google Test source
 GTEST_DIR = ../googletest
 
 # Flags passed to the preprocessor.
@@ -15,32 +13,6 @@ CXX_SUPPRESS = -Wno-sign-compare -Wno-unused-variable
 # Google Test headers - do not modify
 GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h \
                 $(GTEST_DIR)/include/gtest/internal/*.h
-
-# RedisGraph flags and libraries
-
-# TODO - unused right now (perhaps always?)
-# CFLAGS:=$(CFLAGS)
-
-LDFLAGS :=  -lc -lm -ldl -lpthread
-CC_OBJECTS:=$(CC_OBJECTS)
-LIBRMUTIL=../../src/rmutil/librmutil.a
-LIBTRIEMAP=../../src/util/triemap/libtriemap.a
-LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
-
-LIBS=$(LIBTRIEMAP) $(LIBRMUTIL) $(LIBGRAPHBLAS)
-DEPS=$(CC_OBJECTS) $(LIBS)
-
-# Test compilation targets
-TESTS = test_value test_graph
-
-run_tests: $(TESTS)
-	@(sh -c ./test_value)
-	@(sh -c ./test_graph)
-
-all : $(TESTS) run_tests
-
-clean :
-	rm -f $(TESTS) gtest.a gtest_main.a *.o
 
 # Google Test compiler targets
 GTEST_SRCS_ = $(GTEST_DIR)/src/*.cc $(GTEST_DIR)/src/*.h $(GTEST_HEADERS)
@@ -59,11 +31,40 @@ gtest.a : gtest-all.o
 gtest_main.a : gtest-all.o gtest_main.o
 	$(AR) $(ARFLAGS) $@ $^
 
+# RedisGraph flags and libraries
+LDFLAGS :=  -lc -lm -ldl -lpthread
+CC_OBJECTS:=$(CC_OBJECTS)
+LIBRMUTIL=../../src/rmutil/librmutil.a
+LIBTRIEMAP=../../src/util/triemap/libtriemap.a
+LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 
-# RedisGraph compiler targets
-test_value: test_value.o gtest_main.a $(DEPS)
+LIBS=$(LIBTRIEMAP) $(LIBRMUTIL) $(LIBGRAPHBLAS)
+DEPS=$(CC_OBJECTS) $(LIBS)
+
+# Build and run a test for each cpp file in directory
+TEST_SOURCES = $(wildcard *.cpp)
+TEST_OBJECTS = $(patsubst %.cpp, %.o, $(TEST_SOURCES))
+TEST_EXECUTABLES = $(patsubst %.cpp, %.run, $(TEST_SOURCES))
+
+# Compile object files from unit test sources
+%.o: %.cpp
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -c -o $@ $<
+
+# Build '*.run' binaries for each source
+%.run: %.o gtest_main.a $(DEPS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
 
-test_graph: test_graph.o gtest_main.a $(DEPS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
+
+all: build test
+
+build: $(TEST_OBJECTS) $(TEST_EXECUTABLES) $(DEPS)
+
+test: build
+	for t in $(TEST_EXECUTABLES); do \
+		./$$t; \
+	done
+
+clean:
+	rm -f gtest.a gtest_main.a *.o *.run
+.PHONY: clean
 
