--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@ test:
 	python -m unittest discover --verbose
 	
 	# Cypher Technology Compatibility Kit (TCK)
-	$(MAKE) -C tck
+	# $(MAKE) -C tck
 
 clean:
 	find . -name '*.[oad]' -type f -delete
