Sample implementation of GoogleTest suite (#51)
* Sample implementation of GoogleTest suite

* Sample C++ implementations of Graph and Value tests

* Delete unused code for graph test

* Implicit compile and run rules for .cpp unit tests

* Graph test setup only run once

* Add Google Test source files

* Suppress compiler warning for sign comparison in unit tests

* Move Google Test to deps folder

* Fix g++ 5.3 warnings in graph test

* converted test algebraic expression to use GoogleTest

* converted test_resultset_record to use GoogleTest

* converted test_filter_tree to use GoogleTest

* rebase ontop of master, removed unnecessary compilation flags.

* Converted test_arithmetic_expression to use GoogleTest

* Suppress superfluous C++ warnings

* Converted test_aggregate_function to use GoogleTest

* Converted test_tuples_iter to use GoogleTest

* Delete outdated unit tests

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -1,4 +1,37 @@
-CFLAGS:=$(CFLAGS)
+# Path to Google Test source
+GTEST_DIR = ../../deps/googletest
+
+# Flags passed to the preprocessor.
+# Set Google Test's header directory as a system directory, such that
+# the compiler doesn't generate warnings in Google Test headers.
+CPPFLAGS += -isystem $(GTEST_DIR)/include
+
+# Flags passed to the C++ compiler.
+CXXFLAGS += -g -Wall -Wextra -pthread
+CXX_SUPPRESS = -Wno-sign-compare -Wno-format -Wno-write-strings
+
+# Google Test headers - do not modify
+GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h \
+                $(GTEST_DIR)/include/gtest/internal/*.h
+
+# Google Test compiler targets
+GTEST_SRCS_ = $(GTEST_DIR)/src/*.cc $(GTEST_DIR)/src/*.h $(GTEST_HEADERS)
+
+gtest-all.o : $(GTEST_SRCS_)
+	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c \
+            $(GTEST_DIR)/src/gtest-all.cc
+
+gtest_main.o : $(GTEST_SRCS_)
+	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c \
+            $(GTEST_DIR)/src/gtest_main.cc
+
+gtest.a : gtest-all.o
+	$(AR) $(ARFLAGS) $@ $^
+
+gtest_main.a : gtest-all.o gtest_main.o
+	$(AR) $(ARFLAGS) $@ $^
+
+# RedisGraph flags and libraries
 CC_OBJECTS:=$(CC_OBJECTS)
 LIBRMUTIL=../../src/rmutil/librmutil.a
 LIBTRIEMAP=../../src/util/triemap/libtriemap.a
@@ -7,62 +40,30 @@ LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBS=$(LIBTRIEMAP) $(LIBRMUTIL) $(LIBGRAPHBLAS)
 DEPS=$(CC_OBJECTS) $(LIBS)
 
-SRCDIR := $(shell pwd)
-LDFLAGS :=  -lc -lm -ldl -lpthread
+# Build and run a test for each cpp file in directory
+TEST_SOURCES = $(wildcard *.cpp)
+TEST_OBJECTS = $(patsubst %.cpp, %.o, $(TEST_SOURCES))
+TEST_EXECUTABLES = $(patsubst %.cpp, %.run, $(TEST_SOURCES))
 
-.SUFFIXES: .c .so .xo .o
+# Compile object files from unit test sources
+%.o: %.cpp
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXX_SUPPRESS) -c -o $@ $<
 
-graph: test_graph.o
-	$(CC) $(CFLAGS) -o test_graph test_graph.o  $(DEPS) $(LDFLAGS)
+# Build '*.run' binaries for each source
+%.run: %.o gtest_main.a $(DEPS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXX_SUPPRESS) $^ -o $@
 
-algebraic_expression: test_algebraic_expression.o
-	$(CC) $(CFLAGS) -o test_algebraic_expression test_algebraic_expression.o  $(DEPS) $(LDFLAGS)
-
-tuples_iter: test_tuples_iter.o
-	$(CC) $(CFLAGS) -o test_tuples_iter test_tuples_iter.o  $(DEPS) $(LDFLAGS)
-
-filter_tree: test_filter_tree.o
-	$(CC) $(CFLAGS) -o test_filter_tree test_filter_tree.o  $(DEPS) $(LDFLAGS)
-
-value: test_value.o
-	$(CC) $(CFLAGS)  -o test_value test_value.o  $(DEPS) $(LDFLAGS)
-
-arithmetic_expression: test_arithmetic_expression.o
-	$(CC) $(CFLAGS)  -o test_arithmetic_expression test_arithmetic_expression.o  $(DEPS) $(LDFLAGS)
-
-resultset_record: test_resultset_record.o
-	$(CC) $(CFLAGS)  -o test_resultset_record test_resultset_record.o  $(DEPS) $(LDFLAGS)
-
-build: graph algebraic_expression tuples_iter filter_tree value arithmetic_expression resultset_record
-
-test_graph:
-	@(sh -c ./test_graph)
-.PHONY: test_graph
-
-test_algebraic_expression:
-	@(sh -c ./test_algebraic_expression)
-.PHONY: test_algebraic_expression
-
-test_tuples_iter:
-	@(sh -c ./test_tuples_iter)
-.PHONY: test_tuples_iter
-
-test_filter_tree:
-	@(sh -c ./test_filter_tree)
-.PHONY: test_filter_tree
-
-test_value:
-	@(sh -c ./test_value)
-.PHONY: test_value
-
-test_arithmetic_expression:
-	@(sh -c ./test_arithmetic_expression)
-.PHONY: test_arithmetic_expression
-
-test_resultset_record:
-	@(sh -c ./test_resultset_record)
-.PHONY: test_resultset_record
-
-test: test_graph test_algebraic_expression test_tuples_iter test_filter_tree test_value test_arithmetic_expression test_resultset_record
 
 all: build test
+
+build: $(TEST_OBJECTS) $(TEST_EXECUTABLES) $(DEPS)
+
+test: build
+	for t in $(TEST_EXECUTABLES); do \
+		./$$t; \
+	done
+
+clean:
+	rm -f gtest.a gtest_main.a *.o *.run
+.PHONY: clean
+
